--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="https://drive.google.com/file/d/1uaVi95D_zRDyzN5f2QZqZrofn4VhKIuG/view?usp=drivesdk" alt="Your Profile Picture" class="profile-picture">
+            <img src="Photo.jpg" alt="Your Profile Picture" class="profile-picture">
             <h1>Sharmila N</h1>
             <p>Am Web Application Developer</p>
         </div>
@@ -166,7 +166,7 @@
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="https://drive.google.com/file/d/1uRaaHu3A9f0OiYy9MVBZAh3_UfL4irwq/view?usp=drivesdk" target="_blank" class="download-button">OPEN CV</a>
+            <a href="Resume.pdf" target="_blank" class="download-button">OPEN CV</a>
         </center>
         </div>
         
