--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="Photo.jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="photo.jpg" alt="Your Profile Picture" class="profile-picture">
             <h1>Sharmila N</h1>
             <p>Am Web Application Developer</p>
         </div>
