--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="photo.jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="Photo.jpg" alt="Your Profile Picture" class="profile-picture">
             <h1>Sharmila N</h1>
             <p>Am Web Application Developer</p>
         </div>
@@ -166,7 +166,7 @@
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="Resume.pdf" target="_blank" class="download-button">OPEN CV</a>
+            <a href="resume.pdf" target="_blank" class="download-button">OPEN CV</a>
         </center>
         </div>
         
